# automobile-service-management

./: .gitignore  .replit  AutoServ_Enterprise_Marketing_Document.md  AutoServ_Enterprise_SRS.docx  TESTING_CERTIFICATE.md  cookies.txt  cookies5000.txt  generate_marketing_doc.ts  package-lock.json  package.json  pyproject.toml  pytest.ini  replit.md  run_django.sh  start-dev.sh
.agents/: agent_assets_metadata.toml
attached_assets/: AutoServ_QA_Test_Gap_Report_1775412781387.docx  AutoServ_Replit_Instructions_1775407576091.docx  AutoServ_v2_QA_Replit_Guide_1775453012939.docx  AutoServ_v3_Complete_Dev_Guide_1775473270911.docx  AutoServ_v4_QA_Report_1775480410296.docx  Pasted-Act-as-a-senior-QA-architect-SDET-lead-and-release-engi_1773988363113.txt  Pasted-CONTRACT-MODULE-DEFINITION-SCOPE-1-Purpose-of-the-Contr_1767006196075.txt  Pasted-CRM-MODULE-DEFINITION-SCOPE-1-Purpose-of-the-CRM-Module_1767006965431.txt  Pasted-MASTER-PROMPT-CRM-CUSTOMER-JOB-CARD-ACCOUNTS-INTERLINKI_1771242066051.txt  Pasted-MASTER-PROMPT-CUSTOMER-PROFILE-CONTRACT-AWARE-CRM-360-C_1767854740711.txt  Pasted-MASTER-PROMPT-ENTERPRISE-ACCOUNTS-FINANCE-MODULE-Automo_1767370593803.txt  Pasted-MASTER-PROMPT-ENTERPRISE-ADMIN-CONFIGURATION-CENTER-Cen_1767410613051.txt  Pasted-MASTER-PROMPT-ENTERPRISE-HRMS-MODULE-Attendance-Payroll_1767374570775.txt  Pasted-MASTER-PROMPT-ENTERPRISE-INVENTORY-MODULE-FIX-FULL-UPGR_1771235855563.txt  Pasted-MASTER-PROMPT-ENTERPRISE-NOTIFICATION-CENTER-ADMIN-PANE_1767857051810.txt  Pasted-MASTER-PROMPT-FULL-SYSTEM-AUDIT-VALIDATION-CORRECTIVE-A_1771246449029.txt  (+4 more)
server/: index.ts  (+9 more)
(+163 files in other folders)
